<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context=".ui.home.fragments.search.SearchFragment">

    <SearchView
        android:id="@+id/searchView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/bg_search"
        android:focusable="false"
        android:iconifiedByDefault="false"
        android:inputType="textPersonName"
        android:queryHint="@string/search"
        android:searchIcon="@drawable/ic_search" />

    <TextView
        android:id="@+id/text_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/searchView"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="8dp"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="16sp"
        android:textStyle="bold" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvSearch"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/text_search"
        tools:listitem="@layout/item_now_playing" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/notFoundAnim"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_below="@id/searchView"
        android:layout_centerInParent="true"
        android:layout_marginTop="64dp"
        android:visibility="invisible"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/not_found" />

    <TextView
        android:id="@+id/textNotFound"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/notFoundAnim"
        android:layout_centerInParent="true"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/movies_not_found"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="24sp"
        android:textStyle="bold"
        android:visibility="invisible" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/searchAnim"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_below="@id/searchView"
        android:layout_centerInParent="true"
        android:layout_marginTop="64dp"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/search_files" />

    <TextView
        android:id="@+id/textSearchAnim"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/searchAnim"
        android:layout_centerInParent="true"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/search_movies"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="24sp"
        android:textStyle="bold" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnGenres"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textSearchAnim"
        android:layout_centerInParent="true"
        android:layout_marginTop="8dp"
        android:text="@string/see_genres"
        app:cornerRadius="20dp"
        app:strokeColor="@color/colorPrimaryDark" />

</RelativeLayout>