<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:expandableTextView="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".ui.details.DetailActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.github.siyamed.shapeimageview.mask.PorterShapeImageView
                    android:id="@+id/imgBackdropDetail"
                    android:layout_width="match_parent"
                    android:layout_height="250dp"
                    android:scaleType="centerCrop"
                    app:siShape="@drawable/bg_back_drop"
                    app:siSquare="false"
                    tools:src="@drawable/ic_video_camera" />

                <ImageView
                    android:id="@+id/imgPlayTrailer"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:contentDescription="@string/content_desc_banner"
                    android:foreground="?selectableItemBackground"
                    android:src="@drawable/ic_video"
                    android:visibility="invisible"
                    tools:ignore="UnusedAttribute" />
            </FrameLayout>
        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/loadingAnim"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:visibility="invisible"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/loading_animation" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingVertical="16dp">

            <androidx.cardview.widget.CardView
                android:id="@+id/cardImage"
                android:layout_width="120dp"
                android:layout_height="200dp"
                android:layout_marginHorizontal="16dp"
                app:cardCornerRadius="20dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/imgPosterDetail"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:adjustViewBounds="true"
                    android:scaleType="center"
                    tools:ignore="ContentDescription"
                    tools:src="@android:color/darker_gray" />
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/titleDetail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="8dp"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/cardImage"
                app:layout_constraintTop_toTopOf="@id/cardImage"
                tools:text="@string/dummy_title_movie" />

            <TextView
                android:id="@+id/tagLineDetail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="16dp"
                android:layout_marginTop="4dp"
                android:textColor="@android:color/darker_gray"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="@+id/titleDetail"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/cardImage"
                app:layout_constraintTop_toBottomOf="@+id/genreDetail"
                tools:text="Dummy Tag Line Movie" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnSaved"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:text="@string/save"
                android:textColor="@color/colorAccent"
                android:textSize="10sp"
                app:cornerRadius="20dp"
                app:icon="@drawable/ic_save_movie"
                app:iconSize="12dp"
                app:iconTint="@color/colorAccent"
                app:layout_constraintBottom_toBottomOf="@+id/cardImage"
                app:layout_constraintEnd_toStartOf="@id/btnShare"
                app:layout_constraintHorizontal_bias="1"
                app:layout_constraintStart_toStartOf="@+id/titleDetail"
                app:layout_constraintTop_toBottomOf="@+id/tagLineDetail"
                app:layout_constraintVertical_bias="1.0"
                app:layout_goneMarginStart="16dp"
                tools:ignore="SmallSp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnShare"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/share"
                android:textColor="@color/colorAccent"
                android:textSize="10sp"
                app:cornerRadius="20dp"
                app:icon="@drawable/ic_share"
                app:iconSize="12dp"
                app:iconTint="@color/colorAccent"
                app:layout_constraintBottom_toBottomOf="@+id/cardImage"
                app:layout_constraintEnd_toEndOf="@+id/titleDetail"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintTop_toBottomOf="@+id/tagLineDetail"
                app:layout_constraintVertical_bias="1.0"
                tools:ignore="SmallSp" />

            <TextView
                android:id="@+id/genreDetail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="16dp"
                android:layout_marginTop="4dp"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="@+id/titleDetail"
                app:layout_constraintStart_toEndOf="@+id/cardImage"
                app:layout_constraintTop_toBottomOf="@+id/titleDetail"
                tools:text="Adventure, Action, Sci-Fi, Fantasy, Historical, Strategic" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cardInfo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="16dp"
                app:cardCornerRadius="10dp"
                app:layout_constraintEnd_toEndOf="@+id/titleDetail"
                app:layout_constraintStart_toStartOf="@+id/cardImage"
                app:layout_constraintTop_toBottomOf="@+id/cardImage">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:padding="8dp">

                    <TextView
                        android:id="@+id/releaseDateDetail"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:drawablePadding="4dp"
                        android:gravity="center"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="12sp"
                        app:drawableTopCompat="@drawable/ic_date"
                        tools:text="@string/dummy_release_date" />

                    <TextView
                        android:id="@+id/runtimeDetail"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:drawablePadding="4dp"
                        android:gravity="center"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="12sp"
                        app:drawableTopCompat="@drawable/ic_time"
                        tools:text="4h 2m" />

                    <TextView
                        android:id="@+id/statusDetail"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:drawablePadding="4dp"
                        android:gravity="center"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="12sp"
                        app:drawableTopCompat="@drawable/ic_status"
                        tools:text="Release" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/text_overview"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:drawablePadding="8dp"
                android:text="@string/overview"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/titleDetail"
                app:layout_constraintStart_toStartOf="@+id/cardImage"
                app:layout_constraintTop_toBottomOf="@+id/cardInfo" />

            <com.ms.square.android.expandabletextview.ExpandableTextView
                android:id="@+id/expand_text_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toEndOf="@id/text_overview"
                app:layout_constraintStart_toStartOf="@id/text_overview"
                app:layout_constraintTop_toBottomOf="@id/text_overview"
                expandableTextView:animDuration="200"
                expandableTextView:maxCollapsedLines="3">

                <TextView
                    android:id="@+id/expandable_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:lineSpacingMultiplier="1.25"
                    android:textColor="?attr/colorControlNormal"
                    android:textSize="14sp" />

                <ImageButton
                    android:id="@id/expand_collapse"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|bottom"
                    android:background="@android:color/transparent"
                    android:padding="8dp"
                    android:tint="@color/colorPrimaryDark"
                    tools:ignore="ContentDescription" />
            </com.ms.square.android.expandabletextview.ExpandableTextView>

            <TextView
                android:id="@+id/text_videos"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:drawablePadding="8dp"
                android:text="@string/videos"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="18sp"
                android:textStyle="bold"
                android:visibility="invisible"
                app:layout_constraintEnd_toEndOf="@+id/text_overview"
                app:layout_constraintStart_toStartOf="@+id/text_overview"
                app:layout_constraintTop_toBottomOf="@+id/expand_text_view" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvVideos"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/text_overview"
                app:layout_constraintTop_toBottomOf="@+id/text_videos"
                tools:listitem="@layout/item_videos_detail" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnHomepage"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="8dp"
                android:text="@string/visit_website"
                app:cornerRadius="20dp"
                app:icon="@drawable/ic_web"
                app:iconGravity="textStart"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rvVideos"
                app:strokeColor="@color/colorPrimaryDark" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>